# kinbox

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
components/: .gitignore  dummy-server.ts  index.html  package-lock.json  package.json  sequel.html  tsconfig.node.json  vite.config.js  vite.config.ts  webpack.config.js
components/nested/: index.html
components/public/: index.html
components/src/: App.svelte  Login.svelte  MyElement.svelte  Starter.svelte  app.ts  login.svelte  login.ts  main.js  main.ts  secondary.ts
components/src/lib/: Need.svelte
src/: db.rs  handlers.rs  ledger.rs  main.rs  stamp.rs  styles.css  user.rs
