[package]
name = "kinbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-extra = "0.9.2"
maud = { version = "0.26.0", features = ["axum"] }
serde = { version = "1.0.201", features = ["derive"] }
tokio = { version = "1.36.0", features = ["fs", "rt-multi-thread"] }
